# DosSyscallExample

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: dossyscall.h
src/: dossyscall.c  main.c
